Webkit bug fix: `text-align:cener` to td/th `align=center" elements
Weird that they don't already align center. Oh well.

--- a/ghf_marked.css
+++ b/ghf_marked.css
@@ -153,7 +153,9 @@ table tr:nth-child(2n)
 {
 	background-color:#f8f8f8;
 }
-
+table tr th[align="center"], table tr td[align="center"] {
+	text-align:center;
+}
 table tr th, table tr td
 {
 	border:1px solid #ccc;
